# ele_sti

./: CMakeLists.txt  README.md  package.bat
include/common/: protocol_data.h
include/controllers/: SystemMonitor.h  TreatmentManager.h
include/core/: TreatmentService.h
include/hal/: ButtonBackend.h  IBackend.h  RK3568Backend.h  WinBackend.h
resources/qml/: Main.qml
resources/qml/components/: Aboutme.qml  Disk.qml  EAccordion.qml  EAlertDialog.qml  EAnimatedWindow.qml  EAreaChart.qml  EAvatar.qml  EBatteryCard.qml  EBlurCard.qml  EButton.qml  EButton2.qml  ECalendar.qml  ECardWithTextArea.qml  ECarousel.qml  ECheckBox.qml  EClock.qml  EClockCard.qml  EColorPicker.qml  EDrawer.qml  EDropdown.qml  EFitnessProgress.qml  EHitokotoCard.qml  EHoverCard.qml  EInput.qml  EList.qml  ELoader.qml  EMenuButton.qml  EMusicPlayer.qml  ENavBar.qml  ENextHolidayCountdown.qml  EPlaylist.qml  ERadioButton.qml  ESimpleDatePicker.qml  ESlider.qml  ESwitchButton.qml  ETheme.qml  ETimeDisplay.qml  EToast.qml  EYearProgress.qml  MCarousel.qml  (+4 more)
resources/qml/pages/: MusicPage.qml  monitorPage.qml  paramSetPage.qml  systemPage.qml
src/: main.cpp
src/controllers/: SystemMonitor.cpp  TreatmentManager.cpp
src/core/: TreatmentService.cpp
src/hal/: ButtonBackend.cpp  RK3568Backend.cpp  WinBackend.cpp
